--- a/form/src/app/collection-list/collection-list.component.html
+++ b/form/src/app/collection-list/collection-list.component.html
@@ -1,5 +1,5 @@
-<nav>
-<a *ngFor="let user of users$ | async" (click)="select(user)">{{user.name}}</a>
+<nav class="nav">
+<a class="nav-link" *ngFor="let user of users$ | async" (click)="select(user)" >{{user.name}}</a>
 </nav>
 <div *ngIf='fields'>
   <h3>User Detail</h3>
